--- a/index.html
+++ b/index.html
@@ -437,9 +437,9 @@
   <li role="presentation"><a href="#"> <img src="sheenu.jpg" class="msg">Adarsh Patel<img src="dot.jpg" class="online-btn" ></a></li>
   <li role="presentation"><a href="#"> <img src="anil.jpg" class="msg">Anil Kumar<img src="dot.jpg" class="online-btn" ></a></li>
   <li role="presentation"><a href="#"> <img src="amit.jpg" class="msg">Amit Kumar<img src="dot.jpg" class="online-btn" ></a></li> 
-  <li role="presentation"><a href="#"> <img src="Jasmeen.jpg" class="msg">Jasmeen<img src="dot.jpg" class="online-btn" ></a></li>
+  <li role="presentation"><a href="#"> <img src="man.jpg" class="msg">Jasmeen<img src="dot.jpg" class="online-btn" ></a></li>
   <li role="presentation"><a href="#"> <img src="meenu.jpg" class="msg">Sakshi Bhatt<img src="dot.jpg" class="online-btn" ></a></li>
-  <li role="presentation"><a href="#"> <img src="Bhavna.jpg" class="msg">Bhavna Garg<img src="dot.jpg" class="online-btn" ></a></li>
+  <li role="presentation"><a href="#"> <img src="man1.jpg" class="msg">Bhavna Garg<img src="dot.jpg" class="online-btn" ></a></li>
    
     </ul>
 
